page text update

--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
       <div class="categorypicture">
       <img src="" alt="contact" />
       </div>
-      <p>You have questions, we have answers. Contact us here!</p>
+      <p>Have questions, or ready to start your next project? We would love to hear from you! Whether you need more information or are looking to collaborate, our team is here to help. Fill out the contact form, or reach out to us directly via email or phone. Let us create something amazing together.</p>
       
 
       <! -- Portfolio Page -->
       <div class="categorypicture">
       <img src="" alt="portfolio" />
       </div>
-      <p>Check out our hot catalogue! Now with all the latest in christmas fashion!</p>
+      <p>Explore our catalogue to see the heart of what we do. From the latest winter fashhions to christmas apparel, each product reflects our commitment to creativity and quality. </p>
 
       <! -- Quote page -->
       <div class="categorypicture">
       <img src="" alt="quote" />
       </div>
-      <p>Want to order bulk? Perhaps a special size? No problem, we've got you covered. Just click here and contact us!</p>
+      <p>Ready to bring your vision to life? Request a personalized quote tailored to your needs. Whether it is a t-shirt or a fifteen sweaters, we will provide you with a clear and competitive estimate. Simply fill out the form with your details, and we will get back to you promptly to discuss the next steps.</p>
     </main>
     <! -- Footer -->
     <footer class="footer">
