--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0>
-  <link rel="stylesheet" href="styles.css">
-  <title></title>
-</head>
-<body>
-  <! -- Header --> 
-  <header>
-    <! -- Navigation Menu -->
-    <div class="navigation">
-      <a href="#index">Home</a>
-      <a class="active" href="#contact">Contact</a>
-      <a href="#portfolio">Portfolio</a>
-      <a href="#quote">Quote</a>
-    </div>
-    <! -- Logo --> 
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0>
+    <link rel="stylesheet" href="styles.css" />
+    <title></title>
+  </head>
+  <body>
+    <! -- Header -->
+    <header>
+      <! -- Navigation Menu -->
+      <div class="navigation">
+        <a href="../index.html">Home</a>
+        <a class="active" href="HTML/contact.html">Contact</a>
+        <a href="HTML/portfolio.html">Portfolio</a>
+        <a href="HTML/quote.html">Quote</a>
+      </div>
+      <! -- Logo -->
+    </header>
 
-  <! -- Contact Page -->
+    <! -- Contact Page -->
     <! -- Map -->
 
-  <! -- Footer --> 
-  <footer>
-    <! -- Social Networks -->
-    <! -- Adress and legal notice --> 
-    <! -- Logo --> 
-  
-  </footer>
-</body>
-
+    <! -- Footer -->
+    <footer>
+      <! -- Social Networks -->
+      <! -- Adress and legal notice -->
+      <! -- Logo -->
+    </footer>
+  </body>
 </html>
