--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
       <! -- Navigation Menu -->
       <div class="navigation">
-        <a class="active" href="#index">Home</a>
-        <a href="#contact">Contact</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#quote">Quote</a>
+        <a class="active" href="index.html">Home</a>
+        <a href="HTML/contact.html">Contact</a>
+        <a href="HTML/portfolio.html">Portfolio</a>
+        <a href="HTML/quote.html">Quote</a>
       </div>
       <! -- Logo -->
       <div class="headerlogo">
@@ -26,6 +26,8 @@
         <h1>Urban Lifestyle</h1>
         <h3><em>Premium Clothes</em></h3>
         </div>
+      <p>Welcome to Urban Lifestyle Clothing, the home of the freshest apparel. We are all about bold designs, effortless comfort, and a vibe that speaks to the heart of the city. From everyday staples to standout pieces, our collections are designed to move with you. Explore the site, and find your next look that is as dynamic as you are.</p>
+      
       <! -- Contact Page -->
       <div class="categorypicture">
       <img src="" alt="contact" />
@@ -64,6 +66,4 @@
     </footer>
   </body>
 </html>
-
-<!-- Testing GitHub Pages Deployment -->
 
