recommit social media logos

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       <div>
        <! -- Social Networks -->
       <div class="social">
-        <img src="facebook_logo.png" alt="facebook logo" />
-        <img src="twitter_logo.png" alt="twitter logo" />
-        <img src="linkedin_logo.png" alt="linkedin logo" />
+        <img src="images/facebook_logo.png" alt="facebook logo" />
+        <img src="images/twitter_logo.png" alt="twitter logo" />
+        <img src="images/linkedin_logo.png" alt="linkedin logo" />
       </div>
       <! -- Logo -->
       <div class="footerlogo">
