footer css fixed

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       <p>Ready to bring your vision to life? Request a personalized quote tailored to your needs. Whether it is a t-shirt or a fifteen sweaters, we will provide you with a clear and competitive estimate. Simply fill out the form with your details, and we will get back to you promptly to discuss the next steps.</p>
     </main>
     <! -- Footer -->
-    <footer class="footer">
+      <div class="footer">
       <! -- Adress and legal notice -->
       <p>Calle Valiente 6, 28650 Madrid, España</p>
       <p>&#169; 2025 Urban Lifestyle Clothes. All rights reserved</p>
-      <div>
+      </div>
        <! -- Social Networks -->
       <div class="social">
         <img src="Images/facebook_logo.png" alt="facebook logo" />
