logo html other pages

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" , initial-scale="1.0" />
+    <meta name="viewport" content="width=device-width", initial-scale="1.0" />
     <link rel="stylesheet" href="CSS/styles.css" />
     <title></title>
   </head>
@@ -17,6 +17,8 @@
         <a href="HTML/quote.html">Quote</a>
       </div>
       <! -- Logo -->
+      <div class="headerlogo">
+        <img src="" alt="company logo" />
     </header>
 
     <! -- Contact Page -->
