added main other pages

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -22,8 +22,13 @@
     </header>
 
     <! -- Contact Page -->
+    <main class="main">
+      <div class="mainheader">
+      <h1>Urban Lifestyle</h1>
+      <h3><em>Premium Clothes</em></h3>
+      </div>
     <! -- Map -->
-
+</main>
     <! -- Footer -->
     <footer>
       <! -- Social Networks -->
