--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -21,7 +21,11 @@
         <img src="" alt="company logo" />
     </header>
     <! -- Portfolio Page -->
-    <main>
+    <main class="main">
+      <div class="mainheader">
+      <h1>Urban Lifestyle</h1>
+      <h3><em>Premium Clothes</em></h3>
+      </div>
       <! -- Image Gallery -->
     </main>
 
