--- a/HTML/quote.html
+++ b/HTML/quote.html
@@ -20,6 +20,11 @@
       <div class="headerlogo">
         <img src="" alt="company logo" />
     </header>
+    <main class="main">
+      <div class="mainheader">
+      <h1>Urban Lifestyle</h1>
+      <h3><em>Premium Clothes</em></h3>
+      </div>
     <! -- Quote page -->
 
     <! -- Data entry -->
@@ -27,6 +32,8 @@
     <! -- Privacy Policy -->
 
     <! -- Checkbox -->
+
+    </main>
 
     <! -- Footer -->
     <footer>
