--- a/HTML/quote.html
+++ b/HTML/quote.html
@@ -12,9 +12,9 @@
       <! -- Navigation Menu -->
       <div class="navigation">
         <a href="../index.html">Home</a>
-        <a href="HTML/contact.html">Contact</a>
-        <a href="HTML/portfolio.html">Portfolio</a>
-        <a class="active" href="HTML/quote.html">Quote</a>
+        <a href="contact.html">Contact</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a class="active" href="quote.html">Quote</a>
       </div>
       <! -- Logo -->
       <div class="headerlogo">
