pathing test direct

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -12,9 +12,9 @@
       <! -- Navigation Menu -->
       <div class="navigation">
         <a href="../index.html">Home</a>
-        <a class="active" href="contact.html">Contact</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="quote.html">Quote</a>
+        <a class="active" href="/MasterD-Website-Project-1/HTML/contact.html">Contact</a>
+        <a href="/MasterD-Website-Project-1/HTML/portfolio.html">Portfolio</a>
+        <a href="/MasterD-Website-Project-1/HTML/quote.html">Quote</a>
       </div>
       <! -- Logo -->
       <div class="headerlogo">
