--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <! -- Navigation Menu -->
       <div class="navigation">
         <a class="active" href="index.html">Home</a>
-        <a href="HTML/contact.html">Contact</a>
-        <a href="HTML/portfolio.html">Portfolio</a>
-        <a href="HTML/quote.html">Quote</a>
+        <a href="/MasterD-Website-Project-1/HTML/contact.html">Contact</a>
+        <a href="/MasterD-Website-Project-1/HTML/portfolio.html">Portfolio</a>
+        <a href="/MasterD-Website-Project-1/HTML/quote.html">Quote</a>
       </div>
       <! -- Logo -->
       <div class="headerlogo">
