--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -11,7 +11,7 @@
     <header>
       <! -- Navigation Menu -->
       <div class="navigation">
-        <a href="../index.html">Home</a>
+        <a href="/MasterD-Website-Project-1/index.html">Home</a>
         <a class="active" href="/MasterD-Website-Project-1/HTML/contact.html">Contact</a>
         <a href="/MasterD-Website-Project-1/HTML/portfolio.html">Portfolio</a>
         <a href="/MasterD-Website-Project-1/HTML/quote.html">Quote</a>
