--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -18,7 +18,7 @@
       </div>
       <! -- Logo -->
       <div class="headerlogo">
-        <img src="" alt="company logo" />
+        <img src="Images/urban_lifestyle_logo.png" alt="company logo" />
     </header>
     <! -- Portfolio Page -->
     <main class="main">
