--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <! -- Logo -->
       <div class="headerlogo">
-      <img src="" alt="company logo" />
+      <img src="Images/urban_lifestyle_logo.png" alt="company logo" />
     </header>
     <! -- Index Page -->
     <main class="main">
@@ -61,7 +61,7 @@
       </div>
       <! -- Logo -->
       <div class="footerlogo">
-      <img src="" alt="company logo" />
+      <img src="Images/urban_lifestyle_logo.png" alt="company logo" />
       </div>
     </footer>
   </body>
