removed logo top

--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width", initial-scale=1.0>
+    <meta name="viewport" content="width=device-width" , initial-scale="1.0" />
     <link rel="stylesheet" href="../CSS/styles.css" />
     <title>Urban Lifestyle</title>
   </head>
@@ -13,18 +13,17 @@
       <div class="navigation">
         <a href="/MasterD-Website-Project-1/index.html">Home</a>
         <a href="/MasterD-Website-Project-1/HTML/contact.html">Contact</a>
-        <a class="active" href="/MasterD-Website-Project-1/HTML/portfolio.html">Portfolio</a>
+        <a class="active" href="/MasterD-Website-Project-1/HTML/portfolio.html"
+          >Portfolio</a
+        >
         <a href="/MasterD-Website-Project-1/HTML/quote.html">Quote</a>
       </div>
-      <! -- Logo -->
-      <div class="headerlogo">
-        <img src="Images/urban_lifestyle_logo.png" alt="company logo" />
     </header>
     <! -- Portfolio Page -->
     <main class="main">
       <div class="mainheader">
-      <h1>Urban Lifestyle</h1>
-      <h3><em>Premium Clothes</em></h3>
+        <h1>Urban Lifestyle</h1>
+        <h3><em>Premium Clothes</em></h3>
       </div>
       <! -- Image Gallery -->
     </main>
