--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width", initial-scale=1.0>
+    <meta name="viewport" content="width=device-width" , initial-scale="1.0" />
     <link rel="stylesheet" href="../CSS/styles.css" />
     <title>Urban Lifestyle</title>
   </head>
@@ -12,23 +12,22 @@
       <! -- Navigation Menu -->
       <div class="navigation">
         <a href="/MasterD-Website-Project-1/index.html">Home</a>
-        <a class="active" href="/MasterD-Website-Project-1/HTML/contact.html">Contact</a>
+        <a class="active" href="/MasterD-Website-Project-1/HTML/contact.html"
+          >Contact</a
+        >
         <a href="/MasterD-Website-Project-1/HTML/portfolio.html">Portfolio</a>
         <a href="/MasterD-Website-Project-1/HTML/quote.html">Quote</a>
       </div>
-      <! -- Logo -->
-      <div class="headerlogo">
-        <img src="Images/urban_lifestyle_logo.png" alt="company logo" />
     </header>
 
     <! -- Contact Page -->
     <main class="main">
       <div class="mainheader">
-      <h1>Urban Lifestyle</h1>
-      <h3><em>Premium Clothes</em></h3>
+        <h1>Urban Lifestyle</h1>
+        <h3><em>Premium Clothes</em></h3>
       </div>
-    <! -- Map -->
-</main>
+      <! -- Map -->
+    </main>
     <! -- Footer -->
     <footer>
       <! -- Social Networks -->
