--- a/HTML/quote.html
+++ b/HTML/quote.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width", initial-scale=1.0>
+    <meta name="viewport" content="width=device-width" , initial-scale="1.0" />
     <link rel="stylesheet" href="../CSS/styles.css" />
     <title>Urban Lifestyle</title>
   </head>
@@ -14,25 +14,23 @@
         <a href="/MasterD-Website-Project-1/index.html">Home</a>
         <a href="/MasterD-Website-Project-1/HTML/contact.html">Contact</a>
         <a href="/MasterD-Website-Project-1/HTML/portfolio.html">Portfolio</a>
-        <a class="active" href="/MasterD-Website-Project-1/HTML/quote.html">Quote</a>
+        <a class="active" href="/MasterD-Website-Project-1/HTML/quote.html"
+          >Quote</a
+        >
       </div>
-      <! -- Logo -->
-      <div class="headerlogo">
-        <img src="Images/urban_lifestyle_logo.png" alt="company logo" />
     </header>
     <main class="main">
       <div class="mainheader">
-      <h1>Urban Lifestyle</h1>
-      <h3><em>Premium Clothes</em></h3>
+        <h1>Urban Lifestyle</h1>
+        <h3><em>Premium Clothes</em></h3>
       </div>
-    <! -- Quote page -->
+      <! -- Quote page -->
 
-    <! -- Data entry -->
+      <! -- Data entry -->
 
-    <! -- Privacy Policy -->
+      <! -- Privacy Policy -->
 
-    <! -- Checkbox -->
-
+      <! -- Checkbox -->
     </main>
 
     <! -- Footer -->
