--- a/index.html
+++ b/index.html
@@ -52,9 +52,15 @@
       </div>
        <! -- Social Networks -->
       <div class="social">
+        <a href="facebook.com">
         <img src="Images/facebook_logo.png" alt="facebook logo" />
+      </a>
+      <a href=""x.com">
         <img src="Images/twitter_logo.png" alt="twitter logo" />
+      </a>
+      <a href="linkedin.com">
         <img src="Images/linkedin_logo.png" alt="linkedin logo" />
+      </a>
       </div>
       <! -- Logo -->
       <div class="footerlogo">
