--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
       </div>
        <! -- Social Networks -->
       <div class="social">
-        <a href="facebook.com">
+        <a href="https://www.facebook.com">
         <img src="Images/facebook_logo.png" alt="facebook logo" />
       </a>
-      <a href=""x.com">
+      <a href="https://www.x.com">
         <img src="Images/twitter_logo.png" alt="twitter logo" />
       </a>
-      <a href="linkedin.com">
+      <a href="https://www.linkedin.com">
         <img src="Images/linkedin_logo.png" alt="linkedin logo" />
       </a>
       </div>
