--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
       </div>
       <! -- Logo -->
       <div class="footerlogo">
+      <a href="/MasterD-Website-Project-1/index.html"></a>
       <img src="Images/urban_lifestyle_logo.png" alt="company logo" />
+      </a>
       </div>
     </footer>
   </body>
