--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       <img src="Images/contact_urban.jpg" alt="contact" />
       </div>
       <p>Have questions, or ready to start your next project? We would love to hear from you! Whether you need more information or are looking to collaborate, our team is here to help. Fill out the contact form, or reach out to us directly via email or phone. Let us create something amazing together.</p>
+      <a href="MasterD-Website-Project-1/HTML/contact.html">
+        <button type="button">Contact us</button>
+      </a>
       
 
       <! -- Portfolio Page -->
@@ -37,12 +40,17 @@
       <img src="Images/portfolio_urban.jpg" alt="portfolio" />
       </div>
       <p>Explore our catalogue to see the heart of what we do. From the latest winter fashhions to christmas apparel, each product reflects our commitment to creativity and quality. </p>
-
+      <a href="/MasterD-Website-Project-1/HTML/portfolio.html">
+        <button type="button">Check out the catalogue</button>
+      </a>
       <! -- Quote page -->
       <div class="categorypicture">
       <img src="Images/quote_urban.jpg" alt="quote" />
       </div>
       <p>Ready to bring your vision to life? Request a personalized quote tailored to your needs. Whether it is a t-shirt or a fifteen sweaters, we will provide you with a clear and competitive estimate. Simply fill out the form with your details, and we will get back to you promptly to discuss the next steps.</p>
+      <a href="/MasterD-Website-Project-1/HTML/quote.html">
+        <button type="button">Get a quote</button>
+      </a>
     </main>
     <! -- Footer -->
       <div class="footer">
