--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <img src="Images/portfolio_urban.jpg" alt="portfolio" />
       </div>
       <p>Explore our catalogue to see the heart of what we do. From the latest winter fashhions to christmas apparel, each product reflects our commitment to creativity and quality. </p>
-      <a href="/HTML/portfolio.html" class="button">
+      <a href="/MasterD-Website-Project-1/HTML/portfolio.html" class="button">
         <button type="button">Check out the catalogue</button>
       </a>
       <! -- Quote page -->
@@ -48,7 +48,7 @@
       <img src="Images/quote_urban.jpg" alt="quote" />
       </div>
       <p>Ready to bring your vision to life? Request a personalized quote tailored to your needs. Whether it is a t-shirt or a fifteen sweaters, we will provide you with a clear and competitive estimate. Simply fill out the form with your details, and we will get back to you promptly to discuss the next steps.</p>
-      <a href="/HTML/quote.html" class="button">
+      <a href="/MasterD-Website-Project-1/HTML/quote.html" class="button">
         <button type="button">Get a quote</button>
       </a>
     </main>
