--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -29,10 +29,29 @@
       <! -- Map -->
     </main>
     <! -- Footer -->
-    <footer>
-      <! -- Social Networks -->
+      <div class="footer">
       <! -- Adress and legal notice -->
+      <p>Calle Valiente 6, 28650 Madrid, España</p>
+      <p>&#169; 2025 Urban Lifestyle Clothes. All rights reserved</p>
+      </div>
+       <! -- Social Networks -->
+      <div class="social">
+        <a href="https://www.facebook.com">
+        <img src="Images/facebook_logo.png" alt="facebook logo" />
+      </a>
+      <a href="https://www.x.com">
+        <img src="Images/twitter_logo.png" alt="twitter logo" />
+      </a>
+      <a href="https://www.linkedin.com">
+        <img src="Images/linkedin_logo.png" alt="linkedin logo" />
+      </a>
+      </div>
       <! -- Logo -->
+      <div class="footerlogo">
+      <a href="/MasterD-Website-Project-1/index.html"></a>
+      <img src="Images/urban_lifestyle_logo.png" alt="company logo" />
+      </a>
+      </div>
     </footer>
   </body>
 </html>
