--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -37,13 +37,13 @@
        <! -- Social Networks -->
       <div class="social">
         <a href="https://www.facebook.com">
-        <img src="Images/facebook_logo.png" alt="facebook logo" />
+        <img src="/MasterD-Website-Project-1/Images/facebook_logo.png" alt="facebook logo" />
       </a>
       <a href="https://www.x.com">
-        <img src="Images/twitter_logo.png" alt="twitter logo" />
+        <img src="/MasterD-Website-Project-1/Images/twitter_logo.png" alt="twitter logo" />
       </a>
       <a href="https://www.linkedin.com">
-        <img src="Images/linkedin_logo.png" alt="linkedin logo" />
+        <img src="/MasterD-Website-Project-1/Images/linkedin_logo.png" alt="linkedin logo" />
       </a>
       </div>
       <! -- Logo -->
