new images tshirt

--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -26,6 +26,19 @@
         <h3><em>Premium Clothes</em></h3>
       </div>
       <! -- Image Gallery -->
+      <header>Pants</header>
+        <div class="pants">
+
+        </div>
+      <header>T-shirts</header>
+        <div class="tshirts"
+            <img src="/MasterD-Website-Project-1/Images/tshirt4.jpg" alt="black t shirt rock and roll">
+        </div>
+        <div class="description">Matoni T-shirt custom sized</div>
+      <header>Shoes</header>
+      <div class="shoes">
+          
+      </div>
     </main>
 
     <! -- Footer -->
