--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -31,7 +31,7 @@
 
         </div>
       <header>T-shirts</header>
-        <div class="tshirts"
+        <div class="tshirts">
             <img src="/MasterD-Website-Project-1/Images/tshirt4.jpg" alt="black t shirt rock and roll">
         </div>
         <div class="description">Matoni T-shirt custom sized</div>
