--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -33,11 +33,20 @@
       <header>T-shirts</header>
         <div class="tshirts">
             <img src="/MasterD-Website-Project-1/Images/tshirt4.jpg" alt="black t shirt rock and roll">
-            <img src="/MasterD-Website-Project-1/Images/tshirt1.jpg" alt="">
-            <img src="/MasterD-Website-Project-1/Images/tshirt2.jpg" alt="">
-            <img src="/MasterD-Website-Project-1/Images/tshirt3.jpg" alt="">
         </div>
         <div class="description">Matoni T-shirt custom sized</div>
+        <div class="tshirts">
+          <img src="/MasterD-Website-Project-1/Images/tshirt1.jpg" alt="">
+        </div>
+        <div class="description">Brucci T-shirt custom sized</div>
+        <div class="tshirts">
+          <img src="/MasterD-Website-Project-1/Images/tshirt2.jpg" alt="">
+        </div>
+        <div class="description">Milano T-shirt custom sized</div>
+        <div class="tshirts">
+          <img src="/MasterD-Website-Project-1/Images/tshirt3.jpg" alt="">
+        </div>
+        <div class="description">France T-shirt custom sized</div>
       <header>Shoes</header>
       <div class="shoes">
           
