--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -31,6 +31,7 @@
 
         </div>
       <header>T-shirts</header>
+      <div class="clothes">
         <div class="tshirts">
             <img src="/MasterD-Website-Project-1/Images/tshirt4.jpg" alt="black t shirt rock and roll">
         </div>
@@ -48,9 +49,9 @@
         </div>
         <div class="description">France T-shirt custom sized</div>
       <header>Shoes</header>
-      <div class="shoes">
-          
+      <div class="shoes">         
       </div>
+    </div>
     </main>
 
     <! -- Footer -->
