test images gallery

--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -26,12 +26,26 @@
         <h3><em>Premium Clothes</em></h3>
       </div>
       <!-- Image Gallery -->
+    <div class="clothes">
       <header>Pants</header>
         <div class="pants">
-
+          <img src="/MasterD-Website-Project-1/Images/tshirt4.jpg" alt="black t shirt rock and roll">
+          <div class="description">Matoni T-shirt custom sized</div>
+        </div>
+        <div class="pants">
+          <img src="/MasterD-Website-Project-1/Images/tshirt4.jpg" alt="black t shirt rock and roll">
+          <div class="description">Matoni T-shirt custom sized</div>
+        </div>
+        <div class="pants">
+          <img src="/MasterD-Website-Project-1/Images/tshirt4.jpg" alt="black t shirt rock and roll">
+          <div class="description">Matoni T-shirt custom sized</div>
+        </div>
+        <div class="pants">
+          <img src="/MasterD-Website-Project-1/Images/tshirt4.jpg" alt="black t shirt rock and roll">
+          <div class="description">Matoni T-shirt custom sized</div>
         </div>
       <header>T-shirts</header>
-      <div class="clothes">
+
         <div class="tshirts">
             <img src="/MasterD-Website-Project-1/Images/tshirt4.jpg" alt="black t shirt rock and roll">
             <div class="description">Matoni T-shirt custom sized</div>
@@ -52,7 +66,21 @@
         </div>
 
       <header>Shoes</header>
-      <div class="shoes">         
+      <div class="shoes">   
+        <img src="/MasterD-Website-Project-1/Images/tshirt4.jpg" alt="black t shirt rock and roll">
+        <div class="description">Matoni T-shirt custom sized</div>      
+      </div>
+      <div class="shoes">   
+        <img src="/MasterD-Website-Project-1/Images/tshirt4.jpg" alt="black t shirt rock and roll">
+        <div class="description">Matoni T-shirt custom sized</div>      
+      </div>
+      <div class="shoes">   
+        <img src="/MasterD-Website-Project-1/Images/tshirt4.jpg" alt="black t shirt rock and roll">
+        <div class="description">Matoni T-shirt custom sized</div>      
+      </div>
+      <div class="shoes">   
+        <img src="/MasterD-Website-Project-1/Images/tshirt4.jpg" alt="black t shirt rock and roll">
+        <div class="description">Matoni T-shirt custom sized</div>      
       </div>
     </div>
     </main>
