--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -25,6 +25,7 @@
         <h1>Urban Lifestyle</h1>
         <h3><em>Premium Clothes</em></h3>
       </div>
+      <p>Welcome to Urban Lifestyle, where fashion meets the heartbeat of the city. Our collection captures the essence of modern streetwear; bold, trendy, and unapologetically authentic. From standout tees to sleek essentials, we design clothing that speaks to your vibe and empowers your style. Step into the urban flow and make your mark with Urban Lifestyle</p>
       <!-- Image Gallery -->
     <div class="clothes">
       <header>Pants</header>
