--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -30,20 +30,20 @@
     <div class="clothes">
       <header>Pants</header>
         <div class="pants">
-          <img src="/MasterD-Website-Project-1/Images/pants1.jpg" alt="black t shirt rock and roll">
-          <div class="description">Matoni T-shirt custom sized</div>
+          <img src="/MasterD-Website-Project-1/Images/pants1.jpg" alt="blue pants orange background">
+          <div class="description">Hector style pants</div>
         </div>
         <div class="pants">
-          <img src="/MasterD-Website-Project-1/Images/pants2.jpg" alt="black t shirt rock and roll">
-          <div class="description">Matoni T-shirt custom sized</div>
+          <img src="/MasterD-Website-Project-1/Images/pants2.jpg" alt="ripped jeans pants">
+          <div class="description">Brucci jeans</div>
         </div>
         <div class="pants">
-          <img src="/MasterD-Website-Project-1/Images/pants3.jpg" alt="black t shirt rock and roll">
-          <div class="description">Matoni T-shirt custom sized</div>
+          <img src="/MasterD-Website-Project-1/Images/pants3.jpg" alt="short cut pants">
+          <div class="description">Matoni short cut pants</div>
         </div>
         <div class="pants">
-          <img src="/MasterD-Website-Project-1/Images/pants4.jpg" alt="black t shirt rock and roll">
-          <div class="description">Matoni T-shirt custom sized</div>
+          <img src="/MasterD-Website-Project-1/Images/pants4.jpg" alt="pants with frills">
+          <div class="description">Mayamo Frill Pants</div>
         </div>
       <header>T-shirts</header>
 
@@ -52,36 +52,36 @@
             <div class="description">Matoni T-shirt custom sized</div>
         </div>
         <div class="tshirts">
-          <img src="/MasterD-Website-Project-1/Images/tshirt1.jpg" alt="">
+          <img src="/MasterD-Website-Project-1/Images/tshirt1.jpg" alt="black t shirt city background">
           <div class="description">Brucci T-shirt custom sized</div>
         </div>
 
         <div class="tshirts">
-          <img src="/MasterD-Website-Project-1/Images/tshirt2.jpg" alt="">
+          <img src="/MasterD-Website-Project-1/Images/tshirt2.jpg" alt="psychadelic t shirt">
           <div class="description">Milano T-shirt custom sized</div>
         </div>
 
         <div class="tshirts">
-          <img src="/MasterD-Website-Project-1/Images/tshirt3.jpg" alt="">
+          <img src="/MasterD-Website-Project-1/Images/tshirt3.jpg" alt="play hard t shirt">
           <div class="description">France T-shirt custom sized</div>
         </div>
 
       <header>Shoes</header>
       <div class="shoes">   
-        <img src="/MasterD-Website-Project-1/Images/shoes1.jpg" alt="black t shirt rock and roll">
-        <div class="description">Matoni T-shirt custom sized</div>      
+        <img src="/MasterD-Website-Project-1/Images/shoes1.jpg" alt="black converse on prosthethic legs">
+        <div class="description">Converse</div>      
       </div>
       <div class="shoes">   
-        <img src="/MasterD-Website-Project-1/Images/shoes2.jpg" alt="black t shirt rock and roll">
-        <div class="description">Matoni T-shirt custom sized</div>      
+        <img src="/MasterD-Website-Project-1/Images/shoes2.jpg" alt="white tennis shoes">
+        <div class="description">Tennis</div>      
       </div>
       <div class="shoes">   
-        <img src="/MasterD-Website-Project-1/Images/shoes3.jpg" alt="black t shirt rock and roll">
-        <div class="description">Matoni T-shirt custom sized</div>      
+        <img src="/MasterD-Website-Project-1/Images/shoes3.jpg" alt="black leather shoes">
+        <div class="description">Black leather rock</div>      
       </div>
       <div class="shoes">   
-        <img src="/MasterD-Website-Project-1/Images/shoes4.jpg" alt="black t shirt rock and roll">
-        <div class="description">Matoni T-shirt custom sized</div>      
+        <img src="/MasterD-Website-Project-1/Images/shoes4.jpg" alt="black boots ankle height">
+        <div class="description">Cutie boots</div>      
       </div>
     </div>
     </main>
