--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -31,7 +31,7 @@
     <! -- Footer -->
       <div class="footer">
       <! -- Adress and legal notice -->
-      <p>Calle Valiente 6, 28650 Madrid, España</p>
+      <p>Calle de Prim 6, 28004 Madrid, España</p>
       <p>&#169; 2025 Urban Lifestyle Clothes. All rights reserved</p>
       </div>
        <! -- Social Networks -->
